--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,3 @@
 {
-    "presets": ["env"],
-    "plugins": [
-        "transform-vue-jsx"
-    ]
+  "presets": ["@babel/preset-env", "@vue/babel-preset-jsx"]
 }
