--- a/package.json
+++ b/package.json
@@ -19,31 +19,31 @@
   },
   "homepage": "https://github.com/carrieguo/vue.js-learn#readme",
   "dependencies": {
-    "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.1.0",
-    "postcss": "^7.0.17",
+    "cross-env": "^7.0.0",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
+    "postcss": "^7.0.26",
     "postcss-loader": "^3.0.0",
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "url-loader": "^2.0.1",
-    "vue": "^2.6.10",
-    "vue-loader": "^15.7.0",
-    "vue-template-compiler": "^2.6.10"
+    "url-loader": "^3.0.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-syntax-jsx": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+    "@vue/babel-preset-jsx": "^1.1.2",
+    "autoprefixer": "^9.7.4",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "webpack": "^4.36.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "mini-css-extract-plugin": "^0.9.0",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
